--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 <ul class="right">
                     <li><a href=""><i class="material-icons left">local_drink</i> Beer</a></li>
                     <li><a href=""><i class="fa fa-music fa-2x left" aria-hidden="true"></i> Party</a></li>
-                    <li><a href="./public/partials/users.html"><i class="material-icons right">people</i> Profile</a></li>
+                    <li><a href="./public/partials/profile.html"><i class="material-icons right">people</i> Profile</a></li>
+                    <li><a href="./public/partials/users.html"> Users</a></li>
+
                 </ul>
             </div>
         </nav>
